tests/rosetta/out/C/averages-median-3.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:34Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:34Z
#include <stdio.h>
#include <stdlib.h>
#include <time.h>

typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static long long _now() {
  struct timespec ts;
  clock_gettime(CLOCK_REALTIME, &ts);
  return (long long)ts.tv_sec * 1000000000LL + ts.tv_nsec;
}
static list_float slice_list_float(list_float v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_float r = list_float_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
double qsel(list_float a, int k) {
  __auto_type arr = a;
  while (arr.len > 1) {
    __auto_type px = _now() % arr.len;
    __auto_type pv = arr.data[px];
    __auto_type last = arr.len - 1;
    __auto_type tmp = arr.data[px];
    arr.data[px] = arr.data[last];
    arr.data[last] = tmp;
    px = 0;
    __auto_type i = 0;
    while (i < last) {
      __auto_type v = arr.data[i];
      if (v < pv) {
        __auto_type tmp2 = arr.data[px];
        arr.data[px] = arr.data[i];
        arr.data[i] = tmp2;
        px = px + 1;
      }
      i = i + 1;
    }
    if (px == k) {
      return pv;
    }
    if (k < px) {
      list_float tmp1 = slice_list_float(arr, 0, px);
      arr = tmp1;
    } else {
      __auto_type tmp2 = arr.data[px];
      arr.data[px] = pv;
      arr.data[last] = tmp2;
      list_float tmp2 = slice_list_float(arr, (px + 1), arr.len);
      arr = tmp2;
      k = k - (px + 1);
    }
  }
  return arr.data[0];
}

double median(list_float list) {
  __auto_type arr = list;
  __auto_type half = (int)((((double)arr.len) / ((double)2)));
  __auto_type med = qsel(arr, half);
  if (arr.len % 2 == 0) {
    return (med + qsel(arr, half - 1)) / 2.0;
  }
  return med;
}

int _mochi_main() {
  list_float tmp3 = list_float_create(4);
  tmp3.data[0] = 3.0;
  tmp3.data[1] = 1.0;
  tmp3.data[2] = 4.0;
  tmp3.data[3] = 1.0;
  char *tmp4 = _str(median(tmp3));
  printf("%s\n", tmp4);
  list_float tmp5 = list_float_create(5);
  tmp5.data[0] = 3.0;
  tmp5.data[1] = 1.0;
  tmp5.data[2] = 4.0;
  tmp5.data[3] = 1.0;
  tmp5.data[4] = 5.0;
  char *tmp6 = _str(median(tmp5));
  printf("%s\n", tmp6);
  return 0;
}
int main() { return _mochi_main(); }
